Fixed a major bug in my responsive nav. It wasnt taking the full width on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,11 +43,11 @@ body {
     font-family: 'Sora',
     sans-serif;
     background-color: color(primary);
+    position: relative;
 
-    @include mobile {
-        position: relative;
-        height: 100vh;
-    }
+    // @include mobile {
+    //     height: 100vh;
+    // }
 
     nav {
         background-color: color(white);
@@ -82,6 +82,7 @@ body {
                 justify-content: space-between;
                 align-items: center;
                 z-index: 2;
+                
 
                 img {
                     margin-left: 3rem;
@@ -97,7 +98,8 @@ body {
                     top: 0;
                     left: 0;
                     width: 100%;
-                    height: 100%;
+                    bottom: 0;
+                    border: 2px solid red;
                     background-color: color(white);
                     justify-content: center;
                     text-align: center;
@@ -136,7 +138,7 @@ body {
                     margin: 0 0.75rem;
 
                     @include mobile {
-                        padding: 1.5rem 0;
+                        padding: 3rem 0;
                     }
 
                     a {
@@ -169,7 +171,7 @@ body {
         section {
 
             &.text {
-                margin-top: 3rem;
+                margin-top: 2rem;
             }
 
             p {
